# spark

./: .gitignore  CMakeLists.txt
cspark/: CMakeLists.txt  cspark.cpp
cspark/spark/: config.h.in
cspark/spark/ast/: builder.h  defn.h  ident.h  literal.h  module.h  node.cpp  node.h  nodetype.txt  nodevisitor.h  oper.h
cspark/spark/collections/: agenda.h  arrayref.h  hashing.h  map.h  orderedset.h  smallset.h  stringref.h
cspark/spark/common/: stringref.h
cspark/spark/compiler/: compiler.cpp  compiler.h  context.h  contextimpl.cpp  contextimpl.h  fsimport.cpp  fsimport.h  phase.cpp  phase.h  typestore.h
cspark/spark/error/: formatters.cpp  formatters.h  reporter.cpp  reporter.h
cspark/spark/parse/: lexer.cpp  lexer.h  parser.cpp  parser.h  tokens.cpp  tokens.h  tokens.txt
cspark/spark/scope/: closematch.cpp  closematch.h  inheritedscope.cpp  inheritedscope.h  modulepathscope.cpp  modulepathscope.h  namelookuputil.h  scope.h  scopestack.h  specializedscope.cpp  specializedscope.h  stdscope.cpp  stdscope.h
cspark/spark/sema/: pass.h
cspark/spark/sema/names/: fillmemberset.cpp  fillmemberset.h  memberlookup.cpp  memberlookup.h  resolveexprs.cpp  resolveexprs.h  resolverequirements.cpp  resolverequirements.h  resolvetypes.cpp  resolvetypes.h  subject.cpp  subject.h
cspark/spark/sema/passes/: buildgraph.cpp  buildgraph.h  nameresolution.cpp  nameresolution.h  passid.h
cspark/spark/sema/types/: applyenv.cpp  applyenv.h  essentials.cpp  essentials.h  ordering.h  transform.h  typestore.cpp  typestore.h
cspark/spark/semgraph/: defn.cpp  defn.h  defnvisitor.h  env.h  expr.cpp  expr.h  exprvisitor.h  module.cpp  module.h  package.cpp  package.h  primitivetype.cpp  primitivetype.h  requirement.h  type.cpp  type.h  types.cpp  types.h  typevisitor.h
cspark/spark/source/: doccomment.h  location.h  programsource.h
cspark/spark/support/: arena.h  arraybuilder.h  casting.h  path.cpp  path.h
doc/design/: notes.md  todo.md
lib/: CMakeLists.txt
lib/spark/collections/: array.sp  arraylist.sp  collection.sp  exceptions.sp  hashing.sp  hashmap.sp  hashset.sp  iterator.sp  list.sp  map.sp  package.txt  sequence.sp  set.sp  slice.sp
lib/spark/core/: any.sp  attributes.sp  enumeration.sp  exception.sp  function.sp  math.sp  memory.sp  object.sp  package.txt  preconditions.sp  range.sp  string.sp  stringbuilder.sp  stringformatter.sp  typeliteral.sp  valueref.sp
lib/spark/gc/: trace.sp
lib/spark/io/: console.sp  exceptions.sp  filestream.sp  iostream.sp  package.txt  streamtextwriter.sp  textreader.sp  textwriter.sp
lib/spark/text/encodings/: codec.sp  exceptions.sp  package.txt  utf8.sp
scripts/: fix_headers.py
test/: CMakeLists.txt
test/cspark/unit/: CMakeLists.txt  mocks.h  test_lexer.cpp  test_location.cpp  test_parser.cpp  test_path.cpp
